@@ -4,6 +4,7 @@ cm4all-myproxy (0.14) unstable; urgency=low
   * send ERR to client when connection to server fails
   * implement auth plugin "caching_sha2_password" (incomplete, no RSA support)
   * cluster: prefer nodes where auth fails over unreachable ones
+  * cluster: add option "disconnect_unavailable"
 
  --   
 
